--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'TP'
 - !lcsh 'Pottery'
+- GITenberg
 title: 'The Potter''s Craft: A Practical Guide for the Studio and Workshop'
 url: http://www.gutenberg.org/ebooks/40411
